[package]
name = "metadata-parser"
version = "0.1.0"
edition = "2018"

[dependencies]
metadata-parser-generator = { version = "0.1.0", path = "generator", optional = true }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
parity-scale-codec = { version = "2.2.0", features = ["derive"] }
hex = "0.4.3"

[features]
generator = ["metadata-parser-generator"]

[workspace]
members = [
	"generator"
]
