[package]
name = "collector"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.10.0"
serde = { version = "1.0.127", features = ["derive"] }
reqwest = { version = "0.11.4", features = ["json"] }
serde_json = "1.0.66"
serde_yaml = "0.8.18"
anyhow = "1.0.43"
log = "0.4.14"
