[package]
name = "collector"
version = "0.1.0"
edition = "2018"

[lib]
name = "system"
path = "src/lib.rs"

[[bin]]
name = "metadata-collector"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
serde_json = "1.0.66"
serde_yaml = "0.8.18"
anyhow = "1.0.43"
hex = "0.4.3"
tokio = { version = "1.10.0", features = [ "macros", "rt-multi-thread" ] }
serde = { version = "1.0.127", features = [ "derive" ] }
reqwest = { version = "0.11.4", features = [ "json" ] }
