[package]
name = "gekko-generator"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
gekko-metadata = { version = "0.1.0", path = "../metadata" }
quote = "1.0.9"
syn = "1.0.73"
proc-macro2 = "1.0.27"
convert_case = "0.4.0"

[dev-dependencies]
parity-scale-codec = { version = "2.2.0", features = ["derive"] }
