[package]
name = "gekko-generator"
version = "0.1.1"
edition = "2018"
authors = ["Fabio Lama <fabio.lama@pm.me>"]
license = "MIT"
description = "API generator for substrate-based blockchains"
readme = "../README.md"
homepage = "https://github.com/lamafab/gekko"
repository = "https://github.com/lamafab/gekko"
documentation = "https://docs.rs/gekko-generator"

[lib]
proc-macro = true

[dependencies]
gekko-metadata = { version = "0.1.0", path = "../metadata" }
quote = "1.0.9"
syn = "1.0.73"
proc-macro2 = "1.0.27"
convert_case = "0.4.0"

[dev-dependencies]
parity-scale-codec = { version = "2.2.0", features = ["derive"] }
