[package]
name = "gekko"
version = "0.1.1"
edition = "2018"
authors = ["Fabio Lama <fabio.lama@pm.me>"]
license = "MIT"
description = "API interfaces for substrate-based blockchains"
readme = "../README.md"
homepage = "https://github.com/lamafab/gekko"
repository = "https://github.com/lamafab/gekko"
documentation = "https://docs.rs/gekko"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gekko-generator = { version = "0.1.0", path = "../generator" }
gekko-dumps = { version = "0.1.0", path = "../dumps", optional = true }
gekko-metadata = { version = "0.1.0", path = "../metadata", optional = true }
parity-scale-codec = { version = "2.2.0", features = ["derive"] }
hex = "0.4.3"
base58 = "0.1.0"

# Crypto utilities
blake2-rfc = "0.2.18"
ed25519-dalek = "1.0.1"
schnorrkel = "0.9.1"
secp256k1 = { version = "0.20.3", features = ["recovery", "rand-std"] }
rand = "0.7"

[features]
generator = []
metadata = [ "gekko-metadata" ]
dumps = [ "gekko-dumps" ]
