[package]
name = "gekko-metadata"
version = "0.1.0"
edition = "2018"
authors = ["Fabio Lama <fabio.lama@pm.me>"]
license = "MIT"
description = "Metadata parser for substrate-based blockchains"
readme = "../README.md"
homepage = "https://github.com/lamafab/gekko"
repository = "https://github.com/lamafab/gekko"

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
parity-scale-codec = { version = "2.2.0", features = ["derive"] }
hex = "0.4.3"
