[package]
name = "project-x-runtime"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
project-x-generator = { version = "0.1.0", path = "../generator", optional = true }

[features]
generator = ["project-x-generator"]
