[package]
name = "gekko"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gekko-generator = { version = "0.1.0", path = "../generator" }
gekko-metadata = { version = "0.1.0", path = "../metadata", optional = true }
parity-scale-codec = { version = "2.2.0", features = ["derive"] }

[features]
generator = []
metadata = []
