[package]
name = "gekko"
version = "0.1.0"
edition = "2018"
authors = ["Fabio Lama <fabio.lama@pm.me>"]
license-file = "../LICENSE.txt"
description = "API interfaces for substrate-based blockchains"
readme = "../README.md"
homepage = "https://github.com/lamafab/gekko"
repository = "https://github.com/lamafab/gekko"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gekko-generator = { version = "0.1.0", path = "../generator" }
gekko-metadata = { version = "0.1.0", path = "../metadata", optional = true }
parity-scale-codec = { version = "2.2.0", features = ["derive"] }

[features]
generator = []
metadata = [ "gekko-metadata" ]
